php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #25756 SimpleXML's validate_schema_file() broken
Submitted: 2003-10-05 14:18 UTC Modified: 2003-10-05 21:00 UTC
From: adam at trachtenberg dot com Assigned:
Status: Closed Package: XML related
PHP Version: 5CVS-2003-10-05 (dev) OS: Mac OS X
Private report: No CVE-ID: None
 [2003-10-05 14:18 UTC] adam at trachtenberg dot com
Description:
------------
SimpleXML's validate_schema_file() method is completely 
broken.

Reproduce code:
---------------
$s = simplexml_load_file('library.xml');

if ($s->validate_schema_file('library.xsd')) {
  print "valid\n";
} else {
  print "invalid\n";
}

Expected result:
----------------
Should return true when it validates and false when it 
doesn't.

Actual result:
--------------
Always return false.

This patch fixes many problems:

http://www.trachtenberg.com/patches/
simplexml_schema_patch.txt

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-10-05 21:00 UTC] moriyoshi@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sun Sep 27 23:00:02 2026 UTC