Fixed bug #25756 (SimpleXML's validate_schema_file() broken)